2000-09-14 10:23 UTC+0800 Brian Hays <bhays@abacuslaw.com>
   * contrib/rdd_ads/ads1.c
      * adsSkip(): fix for dbskip(0)
   * contrib/rdd_ads/doc/en/readme.txt
      * formatting tweaks
   + contrib/rdd_ads/doc/en/adsfuncs.txt
      + docs for exposed functions in adsfunc.c (work in progress))
   * source/rdd/workarea.c
      * fixed some spelling in TRACE calls

2000-09-13 16:45 UTC-0400 David G. Holm <dholm@jsd-llc.com>

   * include/hbver.h
     * Bumped revision to "a" and date to 2000-09-13
       for an interim release.

   * contrib/rdd_ads/ads1.c
     ! Added #include <ctype.h> to avoid warning for use of tolower()
       in strcmpNoCase().

   * source/rtl/filesys.c
     ! Excluded __RSXNT__ from the DOS-centric lock/unlock #elif block
       in hb_fsLock()

2000-09-11 13:45 UTC-0400 David G. Holm <dholm@jsd-llc.com>

   * source/rdd/dbf1.c
     ! Modified hb_dbfGetValue() and hb_dbfPutValue() to use double
       conversions instead of long conversions when the length of a
       numeric database field without any decimal places exceeds 9.

2000-09-08 03:50 UTC+0800 Ron Pinkas <ron@profit-master.com>
   * config/dos/djgpp.cf
     + Added support for $(C_USER) and $(L_USER) /* Could someone please verify, that this is the correct way. */

   * source/compiler/simplex.c
     + Added: #define SUSPEND_WORDS 8192, and minor support logic.

   * source/compiler/harbour.slx
     ! Removed 14 #defines, and 14 cases from hb_lex_CustomAction(), by taking advantage of SUSPEND_WORDS.

   * source/macro/macro.slx
     - Removed 1 unused variable.

2000-09-07 00:10 UTC+0800 Ron Pinkas <ron@profit-master.com>
   * include/hbcomp.h
   * source/compiler/harbour.c
     + Added: char hb_comp_cCastType

   * source/compiler/harbour.y
     ! Optimized AsType
     + Added: support for type casting like: Var := FunCal() AS ... and, return Var AS ...
     /* Todo: add support for Array[n] := ... AS ..., and oVar:Data := ... AS ... */

   * source/compiler/hbpcode.c