@@ -1,3 +1,15 @@
+2000-09-15 17:45 UTC-0400 David G. Holm <dholm@jsd-llc.com>
+
+   * include/hbver.h
+     * Bumped revision to "b" and date to 2000-09-15
+       for another interim release.
+
+   * source/vm/Makefile
+     % If compiling for the w32 hb_architecture, then compile both
+       the mainstd.c and mainwin.c modules instead of main.c, so
+       that the same library can be used to make both console and
+       windows applications.
+
 2000-09-14 10:23 UTC+0800 Brian Hays <bhays@abacuslaw.com>
    * contrib/rdd_ads/ads1.c
       * adsSkip(): fix for dbskip(0)
